[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[project]
name = "chipsff"
description = "CHIPSFF: A force field analysis toolkit"
version = "2024.10.20"
authors = [
  {name = "Daniel Wines", email = "daniel.wines@nist.gov"},
  {name = "Kamal Choudhary"}
]
dependencies = [
  "numpy<2",
  "scipy",
  "jarvis-tools",
  "pydantic",
  "pydantic_settings",
  "pandas",
  "ase",
  "h5py",
  "plotly",
  "scikit-learn",
  "requests",
  "tqdm",
  "pyyaml",
  "elastic",
  "ruamel.yaml",
  "chgnet"
]
requires-python = ">=3.10"

[project.optional-dependencies]
phonons = ["phonopy", "ruamel", "phono3py"]
kaleido = ["kaleido"]
sevennet = ["sevenn"]
eqV2 = ["fairchem"]
alignn_ff = ["alignn"]
matgl = ["matgl"]
mace = ["mace"]
orb = ["orb"]
chgnet = ["chgnet"]
almostall = [
  "sevenn",
  "alignn",
  "matgl",
  "mace",
  "chgnet",
]

[project.scripts]
run = "chipsff.run_chipsff:main"
